[package]
name = "mpc_server_demo"
version = "0.1.0"
edition = "2021"
description = "Demo MPC server (Party1) for ceres_mpc Flutter SDK — DKLs23 protocol via Axum"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json", "ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
futures-util = "0.3"
tower = { version = "0.5", features = ["util"] }
derivation-path = "0.2.0"

# DKLs23 MPC protocol
sl-dkls23 = { version = "1.0.0-beta", features = ["test-support"] }
sl-mpc-mate = { version = "1.0.0-beta" }

# Crypto
k256 = { version = "0.13", features = ["ecdsa"] }
rand = "0.8"
rand_chacha = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hex = "0.4"
sha3 = "0.10"

# Utilities
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "5"
frost-ed25519 = "3"
bs58 = "0.5"
ceres_wallet_frost_mpc = { git = "https://github.com/SauceWu/ceres_wallet_frost_mpc", branch = "master" }
